fixes text alignment

--- a/www/assets/scss/style.scss
+++ b/www/assets/scss/style.scss
@@ -3200,3 +3200,7 @@ i {
 .inline-spinner-wrapper.loading .inline-spinner-content {
 	opacity: 0;
 }
+
+.points-message-edit-info {
+	text-align: center;
+}
